syntax = "proto3";

package roomservice;

option go_package = "internal/pb";

service RoomService {
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse);
  rpc BookRoom(BookRoomRequest) returns (BookRoomResponse);
  rpc ReleaseRoom(ReleaseRoomRequest) returns (ReleaseRoomResponse);
}

message GetRoomsRequest {
  bool available = 1;
}

message GetRoomsResponse {
  repeated Room rooms = 1;
}

message Room {
  uint64 id = 1;
  int64 number = 2;
  bool is_booked = 3;
}

message BookRoomRequest {
  int64 number = 1;
}

message BookRoomResponse {}

message ReleaseRoomRequest {
  int64 number = 1;
}

message ReleaseRoomResponse {}
